[gd_scene load_steps=5 format=3 uid="uid://4ve0pwcpch2e"]

[ext_resource type="Script" path="res://src/ui_parts/autoformat_menu.gd" id="1_1463h"]
[ext_resource type="Script" path="res://src/ui_elements/BetterTabContainer.gd" id="2_p41oe"]
[ext_resource type="PackedScene" path="res://src/ui_elements/setting_check_box.tscn" id="4_ic3rj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p36ah"]
content_margin_left = 8.0
content_margin_top = 10.0
content_margin_right = 8.0
content_margin_bottom = 10.0
bg_color = Color(0.005, 0.005, 0.05, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.203922, 0.254902, 0.4, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="AutoformatMenu" type="PanelContainer"]
custom_minimum_size = Vector2(440, 260)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p36ah")
script = ExtResource("1_1463h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BetterTabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_p41oe")

[node name="XML" type="ScrollContainer" parent="VBoxContainer/BetterTabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="XmlVBox" type="VBoxContainer" parent="VBoxContainer/BetterTabContainer/XML"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="AddTrailingNewline" parent="VBoxContainer/BetterTabContainer/XML/XmlVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Add trailing newline"
section_name = "autoformat"
setting_name = "xml_add_trailing_newline"

[node name="UseShorthandTagSyntax" parent="VBoxContainer/BetterTabContainer/XML/XmlVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Use shorthand tag syntax"
section_name = "autoformat"
setting_name = "xml_shorthand_tags"

[node name="Numbers" type="ScrollContainer" parent="VBoxContainer/BetterTabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="NumberVBox" type="VBoxContainer" parent="VBoxContainer/BetterTabContainer/Numbers"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="NumberEnable" parent="VBoxContainer/BetterTabContainer/Numbers/NumberVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Enable autoformatting"
section_name = "autoformat"
setting_name = "number_enable_autoformatting"

[node name="RemoveZeroPadding" parent="VBoxContainer/BetterTabContainer/Numbers/NumberVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Remove zero padding"
section_name = "autoformat"
setting_name = "number_remove_zero_padding"

[node name="RemoveLeadingZero" parent="VBoxContainer/BetterTabContainer/Numbers/NumberVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Remove leading zero"
section_name = "autoformat"
setting_name = "number_remove_leading_zero"

[node name="Colors" type="ScrollContainer" parent="VBoxContainer/BetterTabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ColorVBox" type="VBoxContainer" parent="VBoxContainer/BetterTabContainer/Colors"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ColorEnable" parent="VBoxContainer/BetterTabContainer/Colors/ColorVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Enable autoformatting"
section_name = "autoformat"
setting_name = "color_enable_autoformatting"

[node name="ConvertToHex" parent="VBoxContainer/BetterTabContainer/Colors/ColorVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Convert rgb format to hex"
section_name = "autoformat"
setting_name = "color_convert_rgb_to_hex"

[node name="ConvertToHex2" parent="VBoxContainer/BetterTabContainer/Colors/ColorVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Convert named colors to hex"
section_name = "autoformat"
setting_name = "color_convert_named_to_hex"

[node name="UseShorthandHex" parent="VBoxContainer/BetterTabContainer/Colors/ColorVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Use shorthand hex code"
section_name = "autoformat"
setting_name = "color_use_shorthand_hex_code"

[node name="UseNamedColors" parent="VBoxContainer/BetterTabContainer/Colors/ColorVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Use short named colors"
section_name = "autoformat"
setting_name = "color_use_short_named_colors"

[node name="Paths" type="ScrollContainer" parent="VBoxContainer/BetterTabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="PathVBox" type="VBoxContainer" parent="VBoxContainer/BetterTabContainer/Paths"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PathEnable" parent="VBoxContainer/BetterTabContainer/Paths/PathVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Enable autoformatting"
section_name = "autoformat"
setting_name = "path_enable_autoformatting"

[node name="CompressNumbers" parent="VBoxContainer/BetterTabContainer/Paths/PathVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Compress numbers"
section_name = "autoformat"
setting_name = "path_compress_numbers"

[node name="MinimizeSpacing" parent="VBoxContainer/BetterTabContainer/Paths/PathVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Minimize spacing"
section_name = "autoformat"
setting_name = "path_minimize_spacing"

[node name="RemoveSpacingAfterFlags" parent="VBoxContainer/BetterTabContainer/Paths/PathVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Remove spacing after flags"
section_name = "autoformat"
setting_name = "path_remove_spacing_after_flags"

[node name="RemoveConsecutiveCommands" parent="VBoxContainer/BetterTabContainer/Paths/PathVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Remove consecutive commands"
section_name = "autoformat"
setting_name = "path_remove_consecutive_commands"

[node name="Transforms" type="ScrollContainer" parent="VBoxContainer/BetterTabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="TransformVBox" type="VBoxContainer" parent="VBoxContainer/BetterTabContainer/Transforms"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="TransformEnable" parent="VBoxContainer/BetterTabContainer/Transforms/TransformVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Enable autoformatting"
section_name = "autoformat"
setting_name = "transform_enable_autoformatting"

[node name="CompressNumbers" parent="VBoxContainer/BetterTabContainer/Transforms/TransformVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Compress numbers"
section_name = "autoformat"
setting_name = "transform_compress_numbers"

[node name="MinimizeSpacing" parent="VBoxContainer/BetterTabContainer/Transforms/TransformVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Minimize spacing"
section_name = "autoformat"
setting_name = "transform_minimize_spacing"

[node name="RemoveUnnecessaryParameters" parent="VBoxContainer/BetterTabContainer/Transforms/TransformVBox" instance=ExtResource("4_ic3rj")]
layout_mode = 2
text = "Remove unnecessary parameters"
section_name = "autoformat"
setting_name = "transform_remove_unnecessary_params"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Close"

[connection signal="pressed" from="VBoxContainer/BetterTabContainer/XML/XmlVBox/AddTrailingNewline" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/XML/XmlVBox/UseShorthandTagSyntax" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Numbers/NumberVBox/NumberEnable" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Numbers/NumberVBox/RemoveZeroPadding" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Numbers/NumberVBox/RemoveLeadingZero" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Colors/ColorVBox/ColorEnable" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Colors/ColorVBox/ConvertToHex" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Colors/ColorVBox/ConvertToHex2" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Colors/ColorVBox/UseShorthandHex" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Colors/ColorVBox/UseNamedColors" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Paths/PathVBox/PathEnable" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Paths/PathVBox/CompressNumbers" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Paths/PathVBox/MinimizeSpacing" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Paths/PathVBox/RemoveSpacingAfterFlags" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Paths/PathVBox/RemoveConsecutiveCommands" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Transforms/TransformVBox/TransformEnable" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Transforms/TransformVBox/CompressNumbers" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Transforms/TransformVBox/MinimizeSpacing" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/BetterTabContainer/Transforms/TransformVBox/RemoveUnnecessaryParameters" to="." method="_on_autoformat_settings_changed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
